--- a/appsscript.json
+++ b/appsscript.json
@@ -1,7 +1,6 @@
 {
-  "timeZone": "America/New_York",
-  "dependencies": {
-  },
+  "timeZone": "Asia/Kolkata",
+  "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
 }
