--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "vite": "^4.3.9",
     "vite-plugin-singlefile": "^0.13.5",
     "vitest": "^0.34.6"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3"
   }
 }
