--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "svelte-french-toast": "^1.2.0"
   }
 }
