--- a/appsscript.json
+++ b/appsscript.json
@@ -5,6 +5,6 @@
   "runtimeVersion": "V8",
   "webapp": {
     "executeAs": "USER_DEPLOYING",
-    "access": "ANYONE_ANONYMOUS"
+    "access": "MYSELF"
   }
 }
